sbt.version and scalaVersion updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-target/
-.bsp/
-.bloop/
+logs
+project/project
+project/target
+target
+tmp
+.history
+dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
+.bsp
+*.bloop
+/.metals
 metals.sbt
-.metals/
+/.vscode
+application.local.conf
